[tool.poetry]
name = "learn-langgraph"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.39"
langchain = "^0.3.4"
pydantic = "^2.9.2"
langchain-community = "^0.3.3"
langchain-ollama = "^0.2.0"
langfuse = "^2.53.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
